fix(on-boarding): SX 2697 spacing bottom

--- a/src/app/modules/users/on-boarding/on-boarding.page.scss
+++ b/src/app/modules/users/on-boarding/on-boarding.page.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 80px 16px 0;
+    padding: 80px 16px 24px;
     background-image: url('../../../../assets/img/on-boarding/bg.svg');
     background-color: #0d0a2c;
     background-size: cover;
